--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #3e5043;
+  background: var(--primary-green);
   padding: 1rem;
 
   @media (orientation: landscape) and (min-width: 1000px) {
