Added font-loader plugin

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,9 @@
 :root {
   --primary-green: #3e5043;
+
+  --heading-font: "Bebas Neue", sans-serif;
+  --paragraph-font: "Montserrat", sans-serif;
+
+  --spacing: 1em;
+  --half-spacing: 0.5em;
 }
