--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -2,6 +2,15 @@
   background: #3e5043;
   color: #fff;
 
+  div {
+    padding: var(--spacing) 0;
+
+    @media (orientation: landscape) and (min-width: 1000px) {
+      max-width: 900px;
+      margin: auto;
+    }
+  }
+
   a {
     text-decoration: none;
     color: #fff;
