--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,7 +1,7 @@
 .intro {
   display: flex;
   justify-content: space-around;
-  padding: 1rem 0;
+  padding: var(--spacing) 0;
 
   div {
     text-align: center;
